# 4chan-thread-archive

./: README.md  pyproject.toml
src/fourchan/: errors.py  url.py
src/fourchan_archive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/fourchan_archive/scripts/: archive.py
